Add duplicate check and small cleanups